<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">@android:string/ok</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_no_audio_tracks">No Audio Tracks Available</string>
    <string name="cast_tracks_chooser_dialog_no_text_tracks">No Text Tracks Available</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="mr_button_content_description">Cast button</string>
    <string name="mr_chooser_searching">Finding devices</string>
    <string name="mr_chooser_title">Cast to</string>
    <string name="mr_controller_album_art">Album art</string>
    <string name="mr_controller_casting_screen">Casting screen</string>
    <string name="mr_controller_close_description">Close</string>
    <string name="mr_controller_collapse_group">Collapse</string>
    <string name="mr_controller_disconnect">Disconnect</string>
    <string name="mr_controller_expand_group">Expand</string>
    <string name="mr_controller_no_info_available">No info available</string>
    <string name="mr_controller_no_media_selected">No media selected</string>
    <string name="mr_controller_pause">Pause</string>
    <string name="mr_controller_play">Play</string>
    <string name="mr_controller_stop">Stop casting</string>
    <string name="mr_system_route_name">System</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="AP_RPT_ACCEL_ERR">Accelerometer error, please restart aircraft</string>
    <string name="AP_RPT_APP_UNCONNECT">Please connect the App before flying</string>
    <string name="AP_RPT_ATTITUDE">Aircraft in a unstable environment</string>
    <string name="AP_RPT_ATT_OVERFLOW">Persistent Anomaly</string>
    <string name="AP_RPT_BARO_ERR">Barometer error, please restart aircraft</string>
    <string name="AP_RPT_CYRO_ERROR">Gyroscope error, please restart aircraft</string>
    <string name="AP_RPT_Compass_Err">Compass error, please restart the aircraft</string>
    <string name="AP_RPT_DATA_INVALID">Data error, please update No Fly Zone</string>
    <string name="AP_RPT_ERR_PILOT_MODE">Cannot use the function under current mode</string>
    <string name="AP_RPT_GEO_FENCE">Over flight limits</string>
    <string name="AP_RPT_GPS_ERR">GPS error, please restart aircraft</string>
    <string name="AP_RPT_HAS_TAKEN_OFF">Cannot execute during flight</string>
    <string name="AP_RPT_Home_Not_Set">Failed to set home point, cannot execute</string>
    <string name="AP_RPT_INVALID_CMD">Sorry, command cannot be executed</string>
    <string name="AP_RPT_Is_LANDING">Aircraft landing, cannot execute</string>
    <string name="AP_RPT_LOGIC_ERROR">Commands too frequently, cannot execute</string>
    <string name="AP_RPT_LOG_START_FAILED">System initialization error, please restart the aircraft</string>
    <string name="AP_RPT_MODE_TRANS_REJECT">Switching is not supported under current mode</string>
    <string name="AP_RPT_MOTOR_LOCK">Motor is locked, please check motor</string>
    <string name="AP_RPT_NEED_NEW_COOR">Failed to set waypoint, it is recommended to reset</string>
    <string name="AP_RPT_NON_AUTO_MODE">Aircraft in attitude mode, positioning unavailable</string>
    <string name="AP_RPT_NOT_IN_AP_MODE">Not in auto flight mode</string>
    <string name="AP_RPT_NO_FLY_ZONE">Flight is not allowed in No Fly Zone</string>
    <string name="AP_RPT_NO_WAY_POINT">Waypoints abnormal, it is recommended to rearrange waypoints</string>
    <string name="AP_RPT_ON_Calibration">System in calibration, please wait</string>
    <string name="AP_RPT_PARA_ERR">Parameters error, please retry</string>
    <string name="AP_RPT_PHASE_LANDING">Aircraft landing</string>
    <string name="AP_RPT_PHASE_TAKE_OFF">Aircraft taking off</string>
    <string name="AP_RPT_RC_LOST">Please connect RC before flying</string>
    <string name="AP_RPT_RTH_ING">Aircraft is returning to Home</string>
    <string name="AP_RPT_RTH_KEY_SET">Auto RTH ON, please move the key to the left</string>
    <string name="AP_RPT_STICKY_NEUTRAL">RC requires calibration</string>
    <string name="AP_RPT_Vpu">Aircraft in VPU mode, positioning unavailable</string>
    <string name="AT_RPT_LOGIC">Aircraft updating, please wait</string>
    <string name="AT_RPT_STICK_NEUTAL">Aircraft taking off automatically, please do not move stick</string>
    <string name="GC_caliFail_discon">Please connect to RC before calibration</string>
    <string name="GC_caliFail_discon_drone">Please connect to aircraft before calibration</string>
    <string name="GC_caliSucess">Calibration Success</string>
    <string name="GC_calibrationing">Gimbal in auto calibration, please wait</string>
    <string name="GC_califail">Calibration Failed</string>
    <string name="GC_hight_Vibrator">Gimbal vibrating seriously</string>
    <string name="GC_hight_temperature">Gimbal overheated, unable to calibrate</string>
    <string name="GC_horLine_uneven">Gimbal is not placed horizontally</string>
    <string name="GC_low_temperature">The temperature of gimbal is too low, please preheat for calibration</string>
    <string name="GC_temperature_low_accuracy">The temperature fluctuation of gimbal is large, please calibrate later</string>
    <string name="GC_wrong_angle">The angle of gimbal is not correct</string>
    <string name="LOW_POWER">Low battery of aircraft, please land immediately</string>
    <string name="Not_IN_AIR">Please take off the aircraft</string>
    <string name="aggree_milletr">Login means you agree </string>
    <string name="agreement_privacy">TOS</string>
    <string name="agreement_shengming">Disclaimer</string>
    <string name="agreement_yu"> and </string>
    <string name="facebook">Facebook</string>
    <string name="land">Log in</string>
    <string name="miaircraft">Mi Drone</string>
    <string name="notneedlogin" />
    <string name="twitter">Twitter</string>
    <string name="welcomuseing">Welcome To</string>
</resources>