<?xml version="1.0" encoding="utf-8"?>
<com.fimi.kernel.view.percent.PercentRelativeLayout android:orientation="vertical" android:id="@id/login_rl" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.fimi.kernel.view.percent.PercentRelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentRight="true" app:layout_marginLeftPercent="53.17%w">
        <TextView android:textSize="17.0sp" android:textColor="#80ffffff" android:gravity="center" android:id="@id/welcom_tv" android:layout_width="0.0dip" android:layout_height="0.0dip" android:text="@string/welcomuseing" app:layout_widthPercent="71.29%h" app:layout_heightPercent="7%" app:layout_marginTopPercent="12.37%" app:layout_textSizePercent="4.7%" />
        <TextView android:textStyle="bold" android:textColor="#ccffffff" android:gravity="center" android:id="@id/miaircraft_tv" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/miaircraft" app:layout_widthPercent="71.29%h" app:layout_marginTopPercent="18.29%h" app:layout_textSizePercent="7.5%" />
        <Button android:textColor="#e6ffffff" android:id="@id/register_bt" android:background="@drawable/login_btn_selector" android:visibility="invisible" android:layout_width="0.0dip" android:layout_height="0.0dip" android:text="@string/land" android:layout_below="@id/miaircraft_tv" app:layout_widthPercent="71.29%h" app:layout_heightPercent="11.5%" app:layout_marginTopPercent="18%" app:layout_textSizePercent="3.8%" />
        <Button android:textColor="#b2ffffff" android:gravity="center" android:id="@id/login_bt" android:background="@drawable/login_btn_selector" android:layout_width="0.0dip" android:layout_height="0.0dip" android:text="@string/land" android:layout_below="@id/register_bt" app:layout_widthPercent="71.29%h" app:layout_heightPercent="11.13%" app:layout_marginTopPercent="4.6%" app:layout_textSizePercent="3.8%" />
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/ll_trilateral_login" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_below="@id/login_bt" app:layout_widthPercent="71.29%h">
            <Button android:textColor="@drawable/btn_login_color_selector" android:gravity="center" android:id="@id/btn_facebook_login" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/facebook" android:drawableLeft="@drawable/btn_facebook_selector" android:drawablePadding="10.0dip" android:onClick="facebookLogin" />
            <TextView android:background="@color/battery_standar_text" android:layout_width="1.0dip" android:layout_height="14.0dip" android:layout_marginLeft="20.0dip" android:alpha="0.44" />
            <Button android:textColor="@drawable/btn_login_color_selector" android:gravity="center" android:id="@id/btn_twitter_login" android:background="@null" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:text="@string/twitter" android:drawableLeft="@drawable/btn_twitter_selector" android:drawablePadding="10.0dip" android:onClick="twitterLogin" />
        </LinearLayout>
        <TextView android:textColor="#33ffffff" android:id="@id/loginmillet_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aggree_milletr" android:layout_below="@id/ll_trilateral_login" app:layout_marginTopPercent="5%" app:layout_textSizePercent="3.4%" />
        <TextView android:textColor="#4cffffff" android:id="@id/agreementprivacy_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/agreement_privacy" android:layout_toRightOf="@id/loginmillet_tv" android:layout_below="@id/ll_trilateral_login" app:layout_marginTopPercent="5.27%" app:layout_textSizePercent="3.2%" />
        <TextView android:textColor="#4cffffff" android:id="@id/agreement_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/agreement_yu" android:layout_toRightOf="@id/agreementprivacy_tv" android:layout_below="@id/ll_trilateral_login" app:layout_marginTopPercent="5.27%" app:layout_textSizePercent="3.2%" />
        <TextView android:textColor="#4cffffff" android:id="@id/agreementshengming_tv" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/agreement_shengming" android:layout_toRightOf="@id/agreement_tv" android:layout_below="@id/ll_trilateral_login" app:layout_marginTopPercent="5.27%" app:layout_textSizePercent="3.2%" />
        <TextView android:textColor="#4cffffff" android:id="@id/nologin_tv" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="0.0dip" android:text="@string/notneedlogin" android:layout_below="@id/loginmillet_tv" app:layout_heightPercent="5.9%" app:layout_marginLeftPercent="29.26%h" app:layout_marginTopPercent="5.24%" app:layout_textSizePercent="3.2%" />
    </com.fimi.kernel.view.percent.PercentRelativeLayout>
    <RelativeLayout android:id="@id/login_progress_rl" android:background="#bf000000" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ProgressBar android:id="@id/progressBar" android:layout_width="40.0dip" android:layout_height="40.0dip" android:indeterminate="true" android:indeterminateDrawable="@drawable/progress_login" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
    </RelativeLayout>
</com.fimi.kernel.view.percent.PercentRelativeLayout>